--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_messaging: ^15.1.6
   flutter_local_notifications: ^18.0.1
   app_settings: ^5.1.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
